cargo-features = ["profile-rustflags", "trim-paths"]

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
base64 = "0.22"
bb8 = "0.9.0"
brotli = "8.0.2"
built = "0.8"
bytes = "1.10"
chrono = "0.4.42"
clap = { version = "4.5.46", features = ["derive"] }
crossterm = { version = "0.28.1", optional = false }
dashmap = "6.1"
dirs = "6.0"
env_logger = "0.11"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
flate2 = "1.1"
futures = "0.3"
git2 = { version = "0.20", features = ["ssh"] }
http = "1.3"
http-body-util = "0.1"
httparse = "1.10"
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
hyper-openssl = { version = "0.10", features = ["client-legacy"] }
hyper-util = { version = "0.1.17", features = [
  "client",
  "client-legacy",
  "client-proxy",
  "http1",
  "tokio",
] }
insta = "1.43"
k8s-openapi = { version = "0.26.0", default-features = false, features = [
  "latest",
] }
keyring = { version = "3.6", features = [
  "apple-native",
  "linux-native",
  "windows-native",
] }
kftray-commons = { version = "0.27.1", path = "crates/kftray-commons" }
kftray-helper = { version = "0.27.1", path = "crates/kftray-helper" }
kftray-http-logs = { version = "0.27.1", path = "crates/kftray-http-logs" }
kftray-network-monitor = { version = "0.27.1", path = "crates/kftray-network-monitor" }
kftray-portforward = { version = "0.27.1", path = "crates/kftray-portforward" }
kftray-shortcuts = { version = "0.27.1", path = "crates/kftray-shortcuts" }
kube = { version = "2.0.1", features = [
  "client",
  "config",
  "http-proxy",
  "oauth",
  "openssl-tls",
  "runtime",
  "rustls-tls",
  "ws",
] }
kube-core = "2.0"
kube-runtime = { version = "2.0.1", features = ["unstable-runtime"] }
lazy_static = "1.5"
libc = "0.2.175"
log = "0.4"
mockall = "0.13"
netstat2 = { git = "https://github.com/hcavarsan/netstat2-rs" }
once_cell = "1.21"
open = "5.3"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
pem = "3.0"
portpicker = "0.1"
rand = "0.9"
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
ratatui-explorer = "0.2"
rcgen = "0.14"
reqwest = "0.12.23"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8.1"
secrecy = "0.10"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10"
socket2 = "0.6.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
sysinfo = "0.37.1"
tar = "0.4.44"
tauri = { version = "2.8.4", default-features = false, features = [
  "devtools",
  "image-ico",
  "image-png",
  "macos-private-api",
  "tray-icon",
  "wry",
] }
tauri-build = { version = "2.4.0", features = [] }
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-fs = "2.4.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-http = "2.5.2"
tauri-plugin-notification = "2.3.0"
tauri-plugin-os = "2.3.1"
tauri-plugin-positioner = { version = "2.3.0", features = ["tray-icon"] }
tauri-plugin-process = "2.3.0"
tauri-plugin-shell = "2.3.1"
tauri-plugin-updater = "2.5.1"
tempfile = "3.22.0"
thiserror = "2.0.17"
throbber-widgets-tui = "0.9.0"
time = "0.3"
tokio = { version = "1.47.1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
tower-test = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tui-logger = "0.17.4"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.7"
uuid = { version = "1.18.0", features = ["v4"] }
whoami = "1.6.1"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_Security_Cryptography_Certificates",
  "Win32_Storage_FileSystem",
  "Win32_System_Environment",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }
windows-core = "0.62"
windows-service = "0.8"

[profile.dev]
incremental = true
rustflags = ["-Zthreads=8"]

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=4"]
