cargo-features = ["profile-rustflags"]


[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22"
bb8 = "0.9.1"
brotli = "8.0.2"
built = "0.8"
bytes = "1.11"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
crossterm = { version = "0.28.1", optional = false }
dashmap = "6.1"
dirs = "6.0"
env_logger = "0.11"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
flate2 = "1.1"
futures = "0.3"
git2 = { version = "0.20", features = ["ssh"] }
http = "1.4"
http-body-util = "0.1"
httparse = "1.10"
hyper = { version = "1.8.1", features = ["client", "http1", "http2"] }
hyper-openssl = { version = "0.10", features = ["client-legacy"] }
hyper-util = { version = "0.1.19", features = [
  "client",
  "client-legacy",
  "client-proxy",
  "http1",
  "tokio",
] }
insta = "1.46"
k8s-openapi = { version = "0.27.0", default-features = false, features = [
  "latest",
] }
keyring = { version = "3.6", features = [
  "apple-native",
  "linux-native",
  "windows-native",
] }
kftray-commons = { version = "0.27.7", path = "crates/kftray-commons" }
kftray-helper = { version = "0.27.7", path = "crates/kftray-helper" }
kftray-http-logs = { version = "0.27.7", path = "crates/kftray-http-logs" }
kftray-network-monitor = { version = "0.27.7", path = "crates/kftray-network-monitor" }
kftray-portforward = { version = "0.27.7", path = "crates/kftray-portforward" }
kftray-shortcuts = { version = "0.27.7", path = "crates/kftray-shortcuts" }
kube = { version = "3.0.0", features = [
  "client",
  "config",
  "http-proxy",
  "oauth",
  "openssl-tls",
  "runtime",
  "rustls-tls",
  "ws",
] }
kube-core = "3.0"
kube-runtime = { version = "3.0.0", features = ["unstable-runtime"] }
lazy_static = "1.5"
libc = "0.2.180"
log = "0.4"
mockall = "0.14"
netstat2 = { git = "https://github.com/hcavarsan/netstat2-rs" }
once_cell = "1.21"
open = "5.3"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
pem = "3.0"
portpicker = "0.1"
rand = "0.9"
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
ratatui-explorer = "0.2"
rcgen = "0.14"
reqwest = "0.13.1"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8.3"
secrecy = "0.10"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10"
socket2 = "0.6.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
sysinfo = "0.37.2"
tar = "0.4.44"
tauri = { version = "2.9.5", default-features = false, features = [
  "devtools",
  "image-ico",
  "image-png",
  "macos-private-api",
  "tray-icon",
  "wry",
] }
tauri-build = { version = "2.5.3", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-http = "2.5.6"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.4"
tauri-plugin-updater = "2.9.0"
tempfile = "3.24.0"
thiserror = "2.0.18"
throbber-widgets-tui = "0.10.0"
time = "0.3"
tokio = { version = "1.49.0", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
tower-test = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tui-logger = "0.17"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.8"
uuid = { version = "1.19.0", features = ["v4"] }
whoami = "2.0.2"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_Security_Cryptography_Certificates",
  "Win32_Storage_FileSystem",
  "Win32_System_Environment",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }
windows-core = "0.62"
windows-service = "0.8"

[profile.dev]
incremental = true

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
