cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.102"
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }
arc-swap = "1.9"
async-trait = "0.1.89"
base64 = "0.22"
bb8 = "0.9.1"
brotli = "8.0.2"
built = "0.8"
bytes = "1.11"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
core-foundation = "0.10.1"
crossbeam-queue = "0.3"
crossterm = { version = "0.29", optional = false }
dashmap = "6.1"
dbus-secret-service-keyring-store = { version = "1.0", features = [
  "crypto-rust",
] }
dirs = "6.0"
env_logger = "0.11"
evdev = "0.13.2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
fastwebsockets = { version = "0.10", features = ["unstable-split"] }
flate2 = "1.1"
flexi_logger = "0.31"
futures = "0.3"
git2 = { version = "0.20", features = ["ssh"] }
global-hotkey = "0.8.0"
http = "1.4"
http-body-util = "0.1"
httparse = "1.10"
hyper = { version = "1.9.0", features = ["client", "http1", "http2", "server"] }
hyper-openssl = { version = "0.10", features = ["client-legacy"] }
hyper-util = { version = "0.1.20", features = [
  "client",
  "client-legacy",
  "client-proxy",
  "http1",
  "server",
  "tokio",
] }
inotify = "0.11.1"
insta = "1.47"
jiff = { version = "0.2", features = ["serde"] }
k8s-openapi = { version = "0.27.1", default-features = false, features = [
  "latest",
] }
keyring-core = "1.0"
ksni = "0.3"
kftray-commons = { version = "0.27.30", path = "crates/kftray-commons" }
kftray-expose = { version = "0.27.30", path = "crates/kftray-expose" }
kftray-helper = { version = "0.27.30", path = "crates/kftray-helper" }
kftray-hosts = { version = "0.27.30", path = "crates/kftray-hosts" }
kftray-http-logs = { version = "0.27.30", path = "crates/kftray-http-logs" }
kftray-mcp = { version = "0.27.30", path = "crates/kftray-mcp" }
kftray-network-monitor = { version = "0.27.30", path = "crates/kftray-network-monitor" }
kftray-kube = { version = "0.27.30", path = "crates/kftray-kube" }
kftray-shortcuts = { version = "0.27.30", path = "crates/kftray-shortcuts" }
kftray-ssl = { version = "0.27.30", path = "crates/kftray-ssl" }
kube-portforward = { version = "0.1", path = "crates/kube-portforward" }
spdy-mux = { version = "0.1", path = "crates/spdy-mux" }
kube = { version = "3.1.0", features = [
  "client",
  "config",
  "http-proxy",
  "oauth",
  "openssl-tls",
  "runtime",
  "rustls-tls",
  "ws",
] }
kube-core = "3.1"
kube-runtime = { version = "3.1.0", features = ["unstable-runtime"] }
lazy_static = "1.5"
libc = "0.2.186"
linux-keyutils-keyring-store = "1.0"
mio = { version = "1.2.0", features = ["os-ext"] }
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
mockall = "0.14"
netstat2 = "0.11.2"
once_cell = "1.21"
open = "5.3"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
parking_lot = "0.12"
pem = "3.0"
png = "0.18"
rand = "0.10"
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
ratatui-explorer = "0.3.0"
quanta = "0.12"
rcgen = "0.14"
reqwest = "0.13.3"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
] }
rustls-native-certs = "0.8.3"
schannel = "0.1.29"
secrecy = "0.10"
security-framework = "3.7.0"
self_update = { version = "0.44.0", features = ["archive-tar", "compression-flate2"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11"
socket2 = "0.6.3"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-native-tls",
  "sqlite",
] }
sysinfo = "0.39.1"
tar = "0.4.45"
tauri = { version = "2.11.1", default-features = false, features = [
  "devtools",
  "image-ico",
  "image-png",
  "macos-private-api",
  "tray-icon",
  "wry",
] }
tauri-build = { version = "2.6.1", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-http = "2.5.9"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
throbber-widgets-tui = "0.9.0"
time = "0.3"
tokio = { version = "1.52.3", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
  "logging",
  "ring",
  "tls12",
] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
tower-test = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tui-logger = "0.18"
tungstenite = { version = "0.29.0", features = ["native-tls"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }
whoami = "2.1.2"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_Security_Cryptography_Certificates",
  "Win32_Storage_FileSystem",
  "Win32_System_Environment",
  "Win32_System_Pipes",
  "Win32_System_Registry",
  "Win32_System_Threading",
] }
windows-core = "0.62"
windows-native-keyring-store = "1.0"
windows-service = "0.8"

[profile.dev]
incremental = true

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
