[package]
name = "kftray-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
kftray-http-logs = { path = "../crates/kftray-http-logs" }
kftray-commons = { path = "../crates/kftray-commons" }

[[bin]]
name = "fuzz_chunked_body"
path = "fuzz_targets/fuzz_chunked_body.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_config_import"
path = "fuzz_targets/fuzz_config_import.rs"
test = false
doc = false
bench = false
