[package]
name = "kftray-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
bench = false
doc = false
name = "fuzz_chunked_body"
path = "fuzz_targets/fuzz_chunked_body.rs"
test = false

[[bin]]
bench = false
doc = false
name = "fuzz_config_import"
path = "fuzz_targets/fuzz_config_import.rs"
test = false

[dependencies]
kftray-commons = { path = "../crates/kftray-commons" }
kftray-http-logs = { path = "../crates/kftray-http-logs" }
libfuzzer-sys = "0.4.12"
serde_json = "1.0.149"
