[package]
name = "kftray"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "updater", "api-all", "macos-private-api", "system-tray"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
window-shadows = "0.2.2"
dirs = "5.0.1"
kubeforward = { path = "./utils/kubeforward" }
openssl-probe = "0.1.5"

hyper = { version = "0.14.27", features = [ "client", "http1", "http2", "tcp", "stream" ] }
log = "0.4"
directories-next = "2.0"
env_logger = "0.10.1"
wasmedge_quickjs = "0.2.0"
openssl = { version = "0.10.35", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
