[package]
name = "kftray"
version = "0.6.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0.113"
tauri = { version = "1.5", features = [ "updater", "api-all", "macos-private-api", "system-tray"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
dirs = "5.0.1"
kubeforward = { path = "./utils/kubeforward" }

log = "0.4"
env_logger = "0.11.1"
openssl = { version = "0.10.63", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
