[package]
name = "kftray"
version = "0.9.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0.115"
tauri = { version = "1.6", features = [ "updater", "api-all", "macos-private-api", "system-tray", "icon-png"] }
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
dirs = "5.0.1"
kubeforward = { path = "./utils/kubeforward" }
reqwest = "0.12.3"
base64 = "0.22.0"
keyring = "2.3.2"
mockall = "0.12"
hostsfile = { git = "https://github.com/tonarino/innernet", branch = "main" }

log = "0.4"
env_logger = "0.11.3"
openssl = { version = "0.10.64", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.9"

[dependencies.h2]
optional = true
version = "0.4.4"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"