[package]
name = "kftray-commons"
version = "0.19.0"
description = "KFtray commons"
authors = [
    "Henrique Cavarsan <hencavarsan@gmail.com>",
]
license = "MIT"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
tauri = { workspace = true }
sqlx = { workspace = true }
hostsfile = { workspace = true }
tempfile = { workspace = true }
portpicker = { workspace = true }
futures = { workspace = true }

[lib]
name = "kftray_commons"
path = "src/lib.rs"
