[package]
name = "kftray-commons"
version = "0.20.4"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2021"
description = "KFtray commons"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "MIT"

[lib]
name = "kftray_commons"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
hostsfile = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
portpicker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tauri = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }