[package]
name = "kftray-commons"
version = "0.22.8"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2024"
description = "KFtray commons"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[lib]
name = "kftray_commons"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
portpicker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
