[package]
name = "k8s-tunnel-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
async-ssh2-lite = { version = "0.4", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
russh-keys = "0.46"
base64 = "0.22"
rand = "0.8"
openssh-keys = "0.6"
async-trait = "0.1"
