[package]
name = "kftray-helper"
version = "0.22.0"
authors = ["KFTray Contributors"]
edition = "2021"
description = "Privileged helper binary for KFTray"
license = "MIT"

[dependencies]
clap = { workspace = true }
dirs = { workspace = true }
hostsfile = { workspace = true }
kftray-commons = { path = "../kftray-commons" }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
windows-service = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-core = { workspace = true }