[package]
name = "kftray-helper"
version = "0.22.5"
authors = ["KFTray Contributors"]
edition = "2021"
description = "Privileged helper binary for KFTray"
license = "GPL-3.0"

[dependencies]
clap = { workspace = true }
dirs = { workspace = true }
kftray-commons = { path = "../kftray-commons", version = "0.22.2" }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
windows-service = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-core = { workspace = true }