[package]
name = "kftray-helper"
version = "0.27.22"
authors = ["KFTray Contributors"]
edition = "2024"
description = "Privileged helper binary for KFTray"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[dependencies]
clap = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
kftray-commons = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
windows-service = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-core = { workspace = true }
