[package]
name = "kftray-hosts"
version = "0.27.30"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2024"
description = "Hosts file management and loopback aliasing for kftray"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[lib]
name = "kftray_hosts"
path = "src/lib.rs"

[dependencies]
# Filled in 2.2 after moving code
