[package]
name = "kftray-hosts"
version = "0.27.30"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2024"
description = "Hosts file management and loopback aliasing for kftray"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[lib]
name = "kftray_hosts"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
kftray-commons = { workspace = true }
kftray-helper = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[lints]
workspace = true
