[package]
name = "kftray-http-logs"
version = "0.15.8"
description = "HTTP logging library for KFtray"
authors = [
    "Henrique Cavarsan <hencavarsan@gmail.com>",
]
license = "MIT"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
edition = "2021"

[dependencies]
kftray-commons = { path = "../kftray-commons" }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
httparse = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
brotli = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }

[lib]
name = "kftray_http_logs"
path = "src/lib.rs"
