[package]
name = "kftray-http-logs"
version = "0.22.1"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2021"
description = "HTTP logging library for KFtray"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "MIT"

[lib]
name = "kftray_http_logs"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
httparse = { workspace = true }
kftray-commons = { path = "../kftray-commons" }
lazy_static = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
