[package]
name = "kftray-kube"
version = "0.27.30"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2024"
description = "kftray Kubernetes integration: kubeconfig handling, pod watching, port-forward lifecycle, proxy pod deployment, TCP/UDP listeners, global registry"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[package.metadata.cargo-machete]
ignored = [
  "base64",
  "hyper",
  "bytes",
  "dashmap",
  "dirs",
  "httparse",
]

[lib]
name = "kftray_kube"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
hyper = { workspace = true }
hyper-openssl = { workspace = true }
hyper-util = { workspace = true }
jiff = { workspace = true }
k8s-openapi = { workspace = true }
kftray-commons = { workspace = true }
kftray-hosts = { workspace = true }
kftray-ssl = { workspace = true }
kftray-helper = { workspace = true }
kftray-http-logs = { workspace = true }
kube = { workspace = true }
kube-portforward = { workspace = true }
kube-runtime = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
openssl = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
whoami = { workspace = true }

[dev-dependencies]
http = { workspace = true }
tempfile = { workspace = true }
tower-test = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
