[package]
name = "kftray-network-monitor"
version = "0.22.2"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2021"
description = "Network monitoring and management for KFtray"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[dependencies]
futures = { workspace = true }
kftray-commons = { path = "../kftray-commons", version = "0.22.2" }
kftray-http-logs = { path = "../kftray-http-logs", version = "0.22.2" }
kftray-portforward = { path = "../kftray-portforward", version = "0.22.2" }
log = { workspace = true }
tokio = { workspace = true }
